# CodeInterpreter

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml  python-test.yml
docs/source/: conf.py  index.rst
examples/adapter/: openai.ipynb
examples/langchain/: langchain_with_local_jupyter_sandbox.ipynb
examples/langchain/agent/: agent.ipynb
examples/sandbox/: local_jupyter_async.py  local_jupyter_simple.py  local_jupyter_sync.py
gptcode/: __init__.py
gptcode/adapter/: openai.py
gptcode/utils/: __init__.py  error.py  log.py
src/codeinterpreter/: __init__.py  core.py  session.py
src/codeinterpreter/adapter/: adapter.py  openai.py
src/codeinterpreter/agent/openai_functions_agent/: base.py
src/codeinterpreter/sandbox/: factory.py  manager.py  sandbox.py  schema.py
src/codeinterpreter/sandbox/local_jupyter/: manager.py  sandbox.py
src/codeinterpreter/utils/: __init__.py  dependency.py  error.py  log.py
src/gptcode/: __init__.py
src/gptcode/sandbox/: manager.py  sandbox.py  schema.py
src/gptcode/sandbox/local_jupyter/: manager.py  sandbox.py
src/gptcode/utils/: __init__.py  dependency.py  error.py  log.py
tests/unit/sandbox/: test_local_jupyter.py
tests/unit/utils/: test_error.py  test_log.py
